test/snapshots/wipple_test__all-any.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "True"
  - "False"
  - "True"
  - "False"
