test/snapshots/wipple_test__article-selection.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics:
  - location:
      path: tests/article-selection.test.wipple
      start:
        line: 11
        column: 1
        index: 185
      end:
        line: 11
        column: 6
        index: 190
    severity: error
    message: "This code is supposed to be an apple, but it's actually a banana"
    description: "You provided an apple, but you need to put a banana here instead."
  - location:
      path: tests/article-selection.test.wipple
      start:
        line: 12
        column: 1
        index: 203
      end:
        line: 12
        column: 6
        index: 208
    severity: error
    message: "This code is supposed to be an apple, but it's actually an orange"
    description: "You provided an apple, but you need to put an orange here instead."
output: []
