test/snapshots/wipple_test__because.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/because.test.wipple:23:16: error: cannot add distance and time
tests/because.test.wipple:23:16: note: `x0` is distance
tests/because.test.wipple:23:21: note: `v` is a number
tests/because.test.wipple:23:21: note: this is time because multiplying a number by time produces time
tests/because.test.wipple:23:25: note: `t` is time
