test/snapshots/wipple_test__bounds-are-one-way.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics:
  - "tests/bounds-are-one-way.test.wipple:6:5: error: `T` requires `(T Number)`"
output: []
