test/snapshots/wipple_test__build-sequence.test.wipple.snap
---
source: test/src/lib.rs
assertion_line: 187
expression: snapshot
---
diagnostics: []
output:
  - "0"
  - "1"
  - "2"
  - "3"
  - "4"
