test/snapshots/wipple_test__call-function-diagnostic.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
tests/call-function-diagnostic.test.wipple:6:15: error: expected a piece of text here, but found a function
