test/snapshots/wipple_test__comparison.test.wipple.snap
---
source: test/src/lib.rs
expression: snapshot
---
diagnostics: []
output:
  - "True"
  - "True"
  - "True"
  - "True"
  - "True"
  - "True"
  - "True"
  - "False"
  - "True"
  - "True"
  - "False"
  - "True"
